--- a/index6.html
+++ b/index6.html
@@ -25,6 +25,7 @@
             color: #00796b;
             text-align: center;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+            margin-top: 70px; /* المسافة العلوية */
         }
         h2 {
             font-size: 28px;
