--- a/index7.html
+++ b/index7.html
@@ -25,6 +25,7 @@
             color: #1e88e5;
             text-align: center;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+             margin-top: 70px; /* المسافة العلوية */
         }
         h2 {
             font-size: 28px;
