--- a/index12.html
+++ b/index12.html
@@ -25,6 +25,7 @@
             color: #3b5998;
             text-align: center;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+            margin-top: 70px; /* المسافة العلوية */            
         }
         h2 {
             font-size: 28px;
@@ -184,7 +185,7 @@
             starElements.forEach((star, index) => {
                 star.classList.toggle('selected', index < stars);
             });
-            alert(`لقد قمت بتقييم المقال بـ ${stars} نجوم!`);
+            
             localStorage.setItem('rating', stars); // حفظ التقييم
         }
     </script>
