--- a/index11.html
+++ b/index11.html
@@ -25,6 +25,7 @@
             color: #00796b;
             text-align: center;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+            margin-top: 70px; /* المسافة العلوية */
         }
         h2 {
             font-size: 28px;
@@ -189,7 +190,7 @@
                 star.classList.toggle('selected', index < stars); // تلوين النجوم
             });
             localStorage.setItem('rating', stars); // حفظ التقييم
-            alert(`لقد قمت بتقييم المقال بـ ${stars} نجوم!`); // رسالة التأكيد
+           
         }
     </script>
 </body>
