--- a/index8.html
+++ b/index8.html
@@ -25,6 +25,7 @@
             color: #388e3c;
             text-align: center;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+            margin-top: 70px; /* المسافة العلوية */
         }
         h2 {
             font-size: 28px;
@@ -188,7 +189,7 @@
                     star.classList.remove('selected');
                 }
             });
-            alert(`شكراً لتقييمك بـ ${stars} نجوم!`);
+            
             localStorage.setItem('rating', stars); // حفظ التقييم
         }
     </script>
