--- a/index9.html
+++ b/index9.html
@@ -25,6 +25,7 @@
             color: #c62828;
             text-align: center;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+              margin-top: 70px; /* المسافة العلوية */
         }
         h2 {
             font-size: 28px;
@@ -191,7 +192,7 @@
                     star.classList.remove('selected');
                 }
             });
-            alert(`شكراً لتقييمك بـ ${stars} نجوم!`);
+         
             
             // حفظ التقييم في localStorage
             localStorage.setItem('rating', stars);
