--- a/index8.html
+++ b/index8.html
@@ -115,16 +115,22 @@
             <img src="image (6).png" alt="النوم الصحي">
         </div>
         <h2>1. تأثير النوم الصحي على الصحة العامة:</h2>
-        <p>النوم الصحي يعزز من قوة الجهاز المناعي، ويحافظ على توازن الجسم...</p>
+        <p>النوم الصحي يعزز من قوة الجهاز المناعي، ويحافظ على توازن الجسم، ويقلل من خطر الإصابة بالأمراض المزمنة. تظهر الأبحاث أن الأفراد الذين يحصلون على قسط كافٍ من النوم يتمتعون بصحة أفضل، ويقلل لديهم احتمال التعرض لأمراض القلب والسكري.</p>
         
         <h2>2. النوم ودوره في تحسين الإنتاجية والتركيز:</h2>
-        <p>النوم الجيد يحسن من الأداء العقلي ويزيد من القدرة على التركيز...</p>
+        <p>النوم الجيد يحسن من الأداء العقلي ويزيد من القدرة على التركيز. خلال النوم، يحدث إصلاح للدماغ ويُعزز الذاكرة، مما يساعد على التعلم بشكل أفضل. الأفراد الذين يعانون من قلة النوم يميلون إلى فقدان التركيز ويؤثر ذلك على إنتاجيتهم في العمل والدراسة.</p>
 
-        <h2>3. نصائح للحصول على نوم أفضل:</h2>
-        <p>من المهم اتباع نمط ثابت للنوم، وتجنب استخدام الأجهزة الإلكترونية قبل النوم...</p>
+        <h2>3. تأثير النوم على الحالة المزاجية:</h2>
+        <p>النوم الجيد يساعد على تحسين الحالة المزاجية. قلة النوم يمكن أن تؤدي إلى الشعور بالتوتر والقلق والاكتئاب. النوم الجيد يعزز من القدرة على التعامل مع الضغوط اليومية بشكل أفضل ويزيد من الإيجابية.</p>
+
+        <h2>4. نصائح للحصول على نوم أفضل:</h2>
+        <p>من المهم اتباع نمط ثابت للنوم، وتجنب استخدام الأجهزة الإلكترونية قبل النوم، والابتعاد عن الكافيين في ساعات المساء. من المفيد أيضًا خلق بيئة هادئة ومظلمة للنوم. يمكن أن تساعد ممارسة تمارين الاسترخاء مثل اليوغا أو التأمل على تحسين جودة النوم.</p>
+
+        <h2>5. أهمية فترة النوم:</h2>
+        <p>ليس فقط كمية النوم هي المهمة، بل الجودة أيضًا. النوم المتقطع أو السيئ يمكن أن يؤدي إلى مشاكل صحية. لذلك، من المهم معرفة كيفية تحسين نوعية النوم من خلال اتباع العادات الصحية.</p>
 
         <h2>الخاتمة:</h2>
-        <p>النوم الصحي ضروري للحفاظ على الصحة العامة وتحقيق إنتاجية أفضل...</p>
+        <p>النوم الصحي ضروري للحفاظ على الصحة العامة وتحقيق إنتاجية أفضل. من خلال فهم فوائد النوم، يمكننا اتخاذ خطوات لتحسين عادات نومنا، مما يؤدي إلى حياة أكثر صحة وسعادة.</p>
         
         <div class="buttons">
             <a href="https://wa.me/201099690137" class="btn">تواصل معنا</a>
