--- a/index.html
+++ b/index.html
@@ -178,34 +178,35 @@
             <img src="image (10).png" alt="أهمية التعلم مدى الحياة">
             <a href="index12.html" class="btn">أهمية التعلم مدى الحياة</a>
         </div>
+
+        <!-- المقالات الجديدة المضافة -->
+        <div class="image-container" data-title="الإنترنت">
+            <img src="image (11).png" alt="الإنترنت">
+            <a href="index13.html" class="btn">الإنترنت</a>
+        </div>
+        <div class="image-container" data-title="تغير المناخ">
+            <img src="image (12).png" alt="تغير المناخ">
+            <a href="index14.html" class="btn">تغير المناخ</a>
+        </div>
+        <div class="image-container" data-title="الطاقة النظيفة">
+            <img src="image (13).png" alt="الطاقة النظيفة">
+            <a href="index15.html" class="btn">الطاقة النظيفة</a>
+        </div>
+        <div class="image-container" data-title="التكنولوجيا في الطب">
+            <img src="image (14).png" alt="التكنولوجيا في الطب">
+            <a href="index16.html" class="btn">التكنولوجيا في الطب</a>
+        </div>
     </div>
 
     <div class="footer">
-        &copy; 2024 جميع الحقوق محفوظة.
+        <p>جميع الحقوق محفوظة &copy; 2024</p>
     </div>
 
     <script>
-        // عند تحميل الصفحة، تحقق من حالة الوضع المخزنة في localStorage
-        window.onload = function() {
-            const body = document.body;
-            const theme = localStorage.getItem('theme');
-            if (theme === 'dark') {
-                body.classList.add('dark-theme');
-                document.querySelector('.toggle-btn').textContent = 'التبديل إلى الوضع الفاتح';
-            }
-        };
-
         function toggleTheme() {
-            const body = document.body;
-            const btn = document.querySelector('.toggle-btn');
-            body.classList.toggle('dark-theme');
-            if (body.classList.contains('dark-theme')) {
-                btn.textContent = 'التبديل إلى الوضع الفاتح';
-                localStorage.setItem('theme', 'dark'); // تخزين الحالة في localStorage
-            } else {
-                btn.textContent = 'التبديل إلى الوضع الداكن';
-                localStorage.removeItem('theme'); // إزالة الحالة من localStorage
-            }
+            document.body.classList.toggle('dark-theme');
+            const button = document.querySelector('.toggle-btn');
+            button.textContent = document.body.classList.contains('dark-theme') ? 'التبديل إلى الوضع الفاتح' : 'التبديل إلى الوضع الداكن';
         }
 
         function filterArticles() {
@@ -213,7 +214,11 @@
             const articles = document.querySelectorAll('.image-container');
             articles.forEach(article => {
                 const title = article.getAttribute('data-title').toLowerCase();
-                article.style.display = title.includes(query) ? 'block' : 'none';
+                if (title.includes(query)) {
+                    article.style.display = '';
+                } else {
+                    article.style.display = 'none';
+                }
             });
         }
     </script>
