--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   gtag('config', 'G-YR1J729VFY');
 </script>
     
+<script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/7776d5ef2af4c22923e55818d618c555.js"></script>
+    
     <style>
         body {
             font-family: 'Arial', sans-serif;
