--- a/index12.html
+++ b/index12.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مقالة عن التعلم مدى الحياة</title>
+
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9790425661384125"
+     crossorigin="anonymous"></script>
+   
     <style>
         body { 
             font-family: 'Arial', sans-serif;
