--- a/index8.html
+++ b/index8.html
@@ -116,7 +116,7 @@
     <h1>فوائد النوم الصحي</h1>
     <div class="article">
         <div class="image-container">
-            <img src="image (6).png" alt="النوم الصحي">
+            <img src="image (6).webp" alt="النوم الصحي">
         </div>
         <h2>1. تأثير النوم الصحي على الصحة العامة:</h2>
         <p>النوم الصحي يعزز من قوة الجهاز المناعي، ويحافظ على توازن الجسم، ويقلل من خطر الإصابة بالأمراض المزمنة. تظهر الأبحاث أن الأفراد الذين يحصلون على قسط كافٍ من النوم يتمتعون بصحة أفضل، ويقلل لديهم احتمال التعرض لأمراض القلب والسكري.</p>
