--- a/123.html
+++ b/123.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-9790425661384125">
     <title>اختبار الذكاء الاصطناعي</title>
     <style>
         body {
