--- a/index5.html
+++ b/index5.html
@@ -164,7 +164,7 @@
             <a href="https://wa.me/201099690137" class="btn">تواصل معنا</a>
             <a href="#" class="btn" onclick="copyAndShare()">شارك المقال</a>
             <a href="https://ar.wikipedia.org/wiki/رياضة" class="btn" target="_blank">تعلم أكثر</a>
-        </div>
+            <a href="index.html" class="btn">المزيد من المقالات</a>        </div>
     </div>
 
     <script>
